# next-route

./: .gitignore  COMMIT_CONVENTION.md  build.gradle  compose.yaml  settings.gradle
.github/workflows/: ml-image.yml
docs/: phase-c-phase0-verification.sql
docs/plan/: PR1-fastapi-ml-serving.md  PR2-java-ml-client.md  PR3-transfer-arrival-enricher.md  PR4-ops-hardening.md  PR5-transfer-predict-api.md  README.md  rotation-PR5-cumulative-retrain.md
docs/superpowers/plans/: 2026-03-30-mvp-app.md  2026-05-28-ml-subway-delay-truth-v2-matching.md  phaseB.md  subway_station_titmetable_mapping.md
docs/superpowers/specs/: 2026-03-30-mvp-app-design.md
ml/: .dockerignore  .env.example  Dockerfile  README.md  archive.py  baseline.py  build_dataset.py  gate.py  holdout.py  metrics.py  pyproject.toml  retention.py  split.py  test_gate.py  test_holdout.py  train.py  validate.py
ml/ops/: retrain.sh  upload_archive.sh
ml/serve/: app.py  test_app.py
src/main/resources/: application-dev.yaml  application-prod.yaml  application.yaml
src/main/resources/db/migration/: V10__add_full_bus_position_fields.sql  V11__replace_bus_position_fields_with_rtid_response.sql  V12__create_bus_arrival_label_event.sql  V13__add_bus_label_batch_indexes.sql  V14__add_bus_position_collected_at_index.sql  V15__add_stop_route_search_indexes.sql  V16__toss_login.sql  V17__drop_device_id.sql  V1__baseline.sql  V2__create_subway_arrival_event_match_issue.sql  V3__add_direction_to_arrival_raw_unique_key.sql  V6__create_ml_subway_delay_truth.sql  (+2 more)
src/main/resources/templates/: index.html
(+316 files in other folders)
