[project]
name = "nextroute-ml"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "polars",
    "connectorx",
    "pyarrow",
    "python-dotenv",
    "psycopg[binary]",
]

[project.optional-dependencies]
train = [
    "lightgbm",
    "scikit-learn",
    "numpy",
    "pandas",
]

[tool.uv]
package = false
